--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "eslint src --max-warnings=0",
     "test": "jest",
     "test:watch": "yarn test --watchAll",
-    "storybook": "start-storybook -s ./public -p 6006 --no-dll",
-    "build-storybook": "build-storybook --no-dll"
+    "storybook": "start-storybook -s ./public -p 6006",
+    "build-storybook": "build-storybook -s ./public"
   },
   "husky": {
     "hooks": {
