--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
     "babel-loader": "^8.2.1",
+    "babel-plugin-react-require": "^3.1.3",
     "babel-plugin-styled-components": "^1.12.0",
     "cross-env": "^7.0.2",
     "eslint": "^7.14.0",
