--- a/package.json
+++ b/package.json
@@ -11,12 +11,8 @@
     "test:watch": "yarn test --watchAll",
     "generate": "yarn plop --plopfile ./generators/plopfile.js",
     "storybook": "start-storybook -s ./public -p 6006",
-    "build-storybook": "build-storybook -s ./public"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+    "build-storybook": "build-storybook -s ./public",
+    "prepare": "husky install"
   },
   "lint-staged": {
     "src/**/*": [
@@ -48,6 +44,7 @@
     "babel-plugin-react-require": "^3.1.3",
     "babel-plugin-styled-components": "^1.13.2",
     "cross-env": "^7.0.3",
+    "cz-conventional-changelog": "3.3.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
@@ -61,5 +58,10 @@
     "prettier": "^2.3.2",
     "react-is": "^17.0.2",
     "typescript": "^4.3.5"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
