--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "cross-env NODE_ENV=production next build",
     "start": "next start",
     "lint": "eslint src --max-warnings=0",
+    "typecheck": "tsc --project tsconfig.json --noEmit",
     "test": "jest",
     "test:watch": "yarn test --watchAll",
     "generate": "yarn plop --plopfile ./generators/plopfile.js",
@@ -17,6 +18,7 @@
   "lint-staged": {
     "src/**/*": [
       "yarn lint --fix",
+      "yarn typecheck",
       "yarn test --findRelatedTests --bail"
     ]
   },
