--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next-pwa": "^5.2.24",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "storybook-addon-next-router": "^3.0.7",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
